fix: fix nav overflow and header styles

--- a/apps/website/src/routes/docs.css
+++ b/apps/website/src/routes/docs.css
@@ -1,5 +1,5 @@
 .docs {
-  @apply ml-[25vw] lg:max-w-6xl py-28 px-4 sm:px-28;
+  @apply lg:ml-80 w-full lg:max-w-4xl xl:max-w-6xl py-8 px-8 lg:px-16;
 }
 
 .docs h1 {
